--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
     <title>ducky | storage bags</title>
 </head>
 <body>
+    <nav>
+        <p>torby do przechowywania</p>
+        <div class="logo">
+            <img src="images/logo.png" alt="ducky storage bags logo" width="100" height="50" title="ducky storage bags">
+        </div>
+        <div class="navbar">
+            <ul>
+                <li>sklep</li>
+                <li>o ducky</li>
+                <li>kontakt</li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
