--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <title>ducky | storage bags</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,500,700,800&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <p>torby do przechowywania</p>
-        <div class="logo">
+        <a href="index.html" class="logo">
             <img src="images/logo.png" alt="ducky storage bags logo" width="100" height="50" title="ducky storage bags">
-        </div>
-        <div class="navbar">
+        </a>
+        <div class="nav-list">
             <ul>
-                <li>sklep</li>
-                <li>o ducky</li>
-                <li>kontakt</li>
+                <li><a href="sklep.html">sklep</a></li>
+                <li><a href="about.html">o ducky</a></li>
+                <li><a href="about.html/#contact">kontakt</a></li>
             </ul>
         </div>
     </nav>
