mobile wersion beginning

--- a/index.html
+++ b/index.html
@@ -10,17 +10,25 @@
 </head>
 <body>
     <nav>
-        <p>torby do przechowywania</p>
-        <a href="index.html" class="logo">
-            <img src="images/logo.png" alt="ducky storage bags logo" width="100" height="50" title="ducky storage bags">
-        </a>
-        <div class="nav-list">
-            <ul>
-                <li><a href="sklep.html">sklep</a></li>
-                <li><a href="about.html">o ducky</a></li>
-                <li><a href="about.html/#contact">kontakt</a></li>
-            </ul>
+        <div class="main-width">
+            <p>torby do przechowywania</p>
+            <a href="index.html">
+                <img src="images/logo.png" class="logo" alt="ducky storage bags logo" title="ducky storage bags">
+            </a>
+            <a href="" class="burger-button">
+                <div onclick="" class="nav-list-mobile">
+                    <img src="images/icon_burger-button.png" alt="menu">
+                </div>
+            </a>
+            <div class="nav-list-desktop">
+                <ul>
+                    <li><a href="sklep.html">sklep</a></li>
+                    <li><a href="about.html">o ducky</a></li>
+                    <li><a href="about.html/#contact">kontakt</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
+    <div class="full-width-img-height850px"></div>
 </body>
 </html>
