mobile navbar done

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
             </div>
         </div>
     </nav>
-    <div class="full-width-img-height850px"></div>
+    <div class="full-width-img"></div>
 </body>
 </html>
