mobile - main/about -done

--- a/index.html
+++ b/index.html
@@ -25,5 +25,20 @@
         </div>
     </nav>
     <div class="full-width-img"></div>
+    <section class="main-about">
+        <h2>handmade storage bags</h1>
+        <h3>with love from poland</h3>
+        <hr>
+        <p>
+            Ducky bags jest niewielką polską firmą, projektującą 
+i szyjącą worki do przechowywania żywności.
+Wszystkie produkty wykonujemy z naturalnych materiałów, głównie bawełny i lnu. <br>Te dwa wdzięczne surowce są w stanie zastąpić ogromną ilość produkowanego dzisiaj plastiku.
+        </p>
+        <p>
+            Nasze produkty powstały z potrzeby stworzenia
+alternatywy  dla worków foliowych i jednorazówek. 
+        </p>
+
+    </section>
 </body>
 </html>
