mobile - main/shop - done

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <div class="full-width-img"></div>
-    <section class="main-about">
+    <section class="main-about main-width-centred">
         <h2>handmade storage bags</h1>
         <h3>with love from poland</h3>
         <hr>
@@ -39,6 +39,39 @@ Wszystkie produkty wykonujemy z naturalnych materiałów, głównie bawełny i l
 alternatywy  dla worków foliowych i jednorazówek. 
         </p>
 
+    </section>
+    <hr>
+    <section class="main-shop main-width-centred">
+        <div class="product">
+            <h3>#1</h3>
+            <a href="sklep.html">
+                <h2>bawełniana torba</h2>
+                <p class="light">na chleb i inne przysmaki</p>
+                <div class="main-product-img">
+                    <img src="images/torba1-square.jpg">
+                </div>
+            </a>
+
+            <p>
+                Torbę możemy zabrać ze sobą na zakupy
+do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z jednorazowych reklamówek ani zrywek.
+            </p>
+        </div>
+        <div class="product">
+            <h3>#2</h3>
+            <a href="sklep.html">
+                <h2>lniany worek</h2>
+                <p class="light">na zakupy i do przechowywania</p>
+                <div class="main-product-img">
+                    <img src="images/worek1-square.jpg">
+                </div>
+            </a>
+
+            <p>
+                Torbę możemy zabrać ze sobą na zakupy
+do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z jednorazowych reklamówek ani zrywek.
+            </p>
+        </div>
     </section>
 </body>
 </html>
