mobile - main - resizing elements

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <div class="full-width-img"></div>
     <section class="main-about main-width-centred">
-        <h2>handmade storage bags</h1>
+        <h2 class="slogan">handmade storage bags</h2>
         <h3>with love from poland</h3>
         <hr>
         <p>
