mobile - main - adding logo-slogan and footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,500,700,800&display=swap" rel="stylesheet">
 </head>
 <body>
+<!-- NAVIGATION -->
     <nav>
         <div class="main-width">
             <p>torby do przechowywania</p>
@@ -24,7 +25,9 @@
             </div>
         </div>
     </nav>
+<!-- HERO -->
     <div class="full-width-img"></div>
+<!-- ABOUT -->
     <section class="main-about main-width-centred">
         <h2 class="slogan">handmade storage bags</h2>
         <h3>with love from poland</h3>
@@ -41,6 +44,7 @@ alternatywy  dla worków foliowych i jednorazówek.
 
     </section>
     <hr>
+<!-- SHOP -->
     <section class="main-shop main-width-centred">
         <div class="product">
             <h3>#1</h3>
@@ -73,5 +77,20 @@ do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z jednora
             </p>
         </div>
     </section>
+<!-- INSTAGRAM -->
+    <!-- <section class="instagram">
+        <div class="instagram-img"></div>
+        <div class="instagram-img"></div>
+        <div class="instagram-img"></div>
+        <div class="instagram-img"></div>
+        <div class="instagram-img"></div>
+        <div class="instagram-img"></div>
+    </section> -->
+<!-- FOOTER -->
+    <div class="logo-slogan"></div>
+    <footer>
+        <h4>created by <a href="">agata kmiecińska</a></h4>
+        <p>all rights reserved</p>
+    </footer>
 </body>
 </html>
