--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <title>ducky | storage bags</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,500,700,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,600,800&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- NAVIGATION -->
@@ -26,70 +26,75 @@
         </div>
     </nav>
 <!-- HERO -->
-    <div class="full-width-img"></div>
+    <div class="full-width-img">
+        <img src="images/mobile-hero.jpg" alt="hero banner ducky">
+    </div>
 <!-- ABOUT -->
-    <section class="main-about main-width-centred">
+    <section class="main-width-centred">
         <h2 class="slogan">handmade storage bags</h2>
         <h3>with love from poland</h3>
         <hr>
         <p>
             Ducky bags jest niewielką polską firmą, projektującą 
 i szyjącą worki do przechowywania żywności.
-Wszystkie produkty wykonujemy z naturalnych materiałów, głównie bawełny i lnu. <br>Te dwa wdzięczne surowce są w stanie zastąpić ogromną ilość produkowanego dzisiaj plastiku.
+Wszystkie produkty wykonujemy z naturalnych materiałów, głównie bawełny i lnu. 
+        </br>Te dwa wdzięczne surowce są w stanie zastąpić ogromną ilość produkowanego dzisiaj plastiku.
         </p>
-        <p>
+        <p class="bold">
             Nasze produkty powstały z potrzeby stworzenia
 alternatywy  dla worków foliowych i jednorazówek. 
         </p>
-
+        <p class="bold">
+            Jezeli chcesz się dowiedzieć więcej o naszej firmie, zapraszamy na naszą podstronę:
+        </p>
+        <a href="">
+            <button class="about">
+                <h3>o nas</h3>
+            </button>
+        </a>
+                <hr>
     </section>
-    <hr>
 <!-- SHOP -->
-    <section class="main-shop main-width-centred">
+    <section class="shop">
         <div class="product">
-            <h3>#1</h3>
             <a href="sklep.html">
-                <h2>bawełniana torba</h2>
-                <p class="light">na chleb i inne przysmaki</p>
+                <div class="main-width-centred">
+                    <h1>sklep</h1>
+                    <h2 class="shop">bawełniana torba</h2>
+                    <p class="shop bold">na chleb i inne przysmaki</p>
+                    <p>
+                        Torbę możemy zabrać ze sobą na zakupy
+        do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z reklamówek jednorazowych.
+                    </p>
+                </div>
                 <div class="main-product-img">
                     <img src="images/torba1-square.jpg">
                 </div>
             </a>
-
-            <p>
-                Torbę możemy zabrać ze sobą na zakupy
-do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z jednorazowych reklamówek ani zrywek.
-            </p>
         </div>
         <div class="product">
-            <h3>#2</h3>
             <a href="sklep.html">
-                <h2>lniany worek</h2>
-                <p class="light">na zakupy i do przechowywania</p>
+                <div class="main-width-centred">
+                    <h2 class="shop">lniany worek</h2>
+                    <p class="shop bold">do przechowywania</p>
+                    <p>
+                        Torbę możemy zabrać ze sobą na zakupy
+        do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z reklamówek jednorazowych.
+                    </p>
+                </div>
                 <div class="main-product-img">
                     <img src="images/worek1-square.jpg">
                 </div>
             </a>
-
-            <p>
-                Torbę możemy zabrać ze sobą na zakupy
-do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z jednorazowych reklamówek ani zrywek.
-            </p>
         </div>
     </section>
 <!-- INSTAGRAM -->
     <!-- <section class="instagram">
-        <div class="instagram-img"></div>
-        <div class="instagram-img"></div>
-        <div class="instagram-img"></div>
-        <div class="instagram-img"></div>
-        <div class="instagram-img"></div>
-        <div class="instagram-img"></div>
     </section> -->
 <!-- FOOTER -->
     <div class="logo-slogan"></div>
     <footer>
-        <h4>created by <a href="">agata kmiecińska</a></h4>
+        <p class="bold">created by <a href="">agata kmiecińska</a></p>
         <p>all rights reserved</p>
     </footer>
 </body>
