mobile - main - reseting all margins and code refactoring

--- a/index.html
+++ b/index.html
@@ -16,55 +16,50 @@
             <a href="index.html">
                 <img src="images/logo.png" class="logo" alt="ducky storage bags logo" title="ducky storage bags">
             </a>
-            <div class="nav-list-desktop">
-                <ul>
-                    <li><a href="sklep.html">sklep</a></li>
-                    <li><a href="about.html">o ducky</a></li>
-                    <li><a href="about.html/#contact">kontakt</a></li>
-                </ul>
+            <div class="nav-top">
+                <a href="sklep.html">sklep</a>
+                <a href="about.html">o ducky</a>
+                <a href="about.html/#contact">kontakt</a>
             </div>
         </div>
     </nav>
+
 <!-- HERO -->
     <div class="full-width-img">
         <img src="images/mobile-hero.jpg" alt="hero banner ducky">
     </div>
+
 <!-- ABOUT -->
-    <section class="main-width-centred">
+    <section class="main-width">
         <h2 class="slogan">handmade storage bags</h2>
-        <h3>with love from poland</h3>
+        <p class="bold">with love from poland</p>
         <hr>
         <p>
             Ducky bags jest niewielką polską firmą, projektującą 
-i szyjącą worki do przechowywania żywności.
-Wszystkie produkty wykonujemy z naturalnych materiałów, głównie bawełny i lnu. 
+            i szyjącą worki do przechowywania żywności.
+            Wszystkie produkty wykonujemy z naturalnych materiałów, głównie bawełny i lnu. 
         </br>Te dwa wdzięczne surowce są w stanie zastąpić ogromną ilość produkowanego dzisiaj plastiku.
         </p>
         <p class="bold">
             Nasze produkty powstały z potrzeby stworzenia
-alternatywy  dla worków foliowych i jednorazówek. 
+            alternatywy  dla worków foliowych i jednorazówek. 
         </p>
-        <p class="bold">
-            Jezeli chcesz się dowiedzieć więcej o naszej firmie, zapraszamy na naszą podstronę:
+        <p class="link-underline">
+            Więcej o ducky, <a href="">tutaj</a>.
         </p>
-        <a href="">
-            <button class="about">
-                <h3>o nas</h3>
-            </button>
-        </a>
-                <hr>
     </section>
 <!-- SHOP -->
     <section class="shop">
         <div class="product">
             <a href="sklep.html">
-                <div class="main-width-centred">
-                    <h1>sklep</h1>
+                <div class="main-width">
+                    <hr>
+                    <h1>asortyment</h1>
                     <h2 class="shop">bawełniana torba</h2>
                     <p class="shop bold">na chleb i inne przysmaki</p>
                     <p>
                         Torbę możemy zabrać ze sobą na zakupy
-        do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z reklamówek jednorazowych.
+                        do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z reklamówek jednorazowych.
                     </p>
                 </div>
                 <div class="main-product-img">
@@ -74,12 +69,12 @@ alternatywy  dla worków foliowych i jednorazówek.
         </div>
         <div class="product">
             <a href="sklep.html">
-                <div class="main-width-centred">
+                <div class="main-width">
                     <h2 class="shop">lniany worek</h2>
                     <p class="shop bold">do przechowywania</p>
                     <p>
                         Torbę możemy zabrać ze sobą na zakupy
-        do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z reklamówek jednorazowych.
+                        do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z reklamówek jednorazowych.
                     </p>
                 </div>
                 <div class="main-product-img">
