mobile - main - adjustment

--- a/index.html
+++ b/index.html
@@ -30,22 +30,23 @@
     </div>
 
 <!-- ABOUT -->
-    <section class="main-width">
+    <section class="about main-width">
         <h2 class="slogan">handmade storage bags</h2>
         <p class="bold">with love from poland</p>
         <hr>
-        <p>
+        <p class="bold bigger">            
             Ducky bags jest niewielką polską firmą, projektującą 
-            i szyjącą worki do przechowywania żywności.
+            i szyjącą worki do przechowywania żywności.</p>
+        <p>
             Wszystkie produkty wykonujemy z naturalnych materiałów, głównie bawełny i lnu. 
         </br>Te dwa wdzięczne surowce są w stanie zastąpić ogromną ilość produkowanego dzisiaj plastiku.
         </p>
-        <p class="bold">
+        <p>
             Nasze produkty powstały z potrzeby stworzenia
             alternatywy  dla worków foliowych i jednorazówek. 
         </p>
-        <p class="link-underline">
-            Więcej o ducky, <a href="">tutaj</a>.
+        <p class="bold link-underline">
+            Więcej o ducky znajdziesz, <a href="">tutaj</a>.
         </p>
     </section>
 <!-- SHOP -->
@@ -54,16 +55,16 @@
             <a href="sklep.html">
                 <div class="main-width">
                     <hr>
-                    <h1>asortyment</h1>
+                    <h3>nasze produkty</h3>
                     <h2 class="shop">bawełniana torba</h2>
                     <p class="shop bold">na chleb i inne przysmaki</p>
                     <p>
                         Torbę możemy zabrać ze sobą na zakupy
-                        do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z reklamówek jednorazowych.
+                        do sklepu lub piekarni, nie będziemy musieli korzystać jednorazówek.
                     </p>
                 </div>
                 <div class="main-product-img">
-                    <img src="images/torba1-square.jpg">
+                    <img src="images/mobile-torba1.jpg">
                 </div>
             </a>
         </div>
@@ -73,12 +74,11 @@
                     <h2 class="shop">lniany worek</h2>
                     <p class="shop bold">do przechowywania</p>
                     <p>
-                        Torbę możemy zabrać ze sobą na zakupy
-                        do sklepu lub piekarni, dzięki czemu nie będziemy musieli korzystać z reklamówek jednorazowych.
+                        Worek doskonale nadaje się na zakupy oraz do przechowywania produktów w lodówce.
                     </p>
                 </div>
                 <div class="main-product-img">
-                    <img src="images/worek1-square.jpg">
+                    <img src="images/mobile-worek1.jpg">
                 </div>
             </a>
         </div>
