mobile - main - refactoring

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h2 class="shop">lniany worek</h2>
                     <p class="shop bold">do przechowywania</p>
                     <p>
-                        Worek doskonale nadaje się na zakupy oraz do przechowywania produktów w lodówce.
+                        Worek doskonale nadaje się na zakupy na  oraz do przechowywania produktów w lodówce.
                     </p>
                 </div>
                 <div class="main-product-img">
