--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <!-- ABOUT -->
     <section class="about main-width">
-        <h2 class="slogan">handmade storage bags</h2>
-        <p class="bold">with love from poland</p>
+        <div class="slogan">naturalne<br>torby<br>do domowej<br>spiżarni</div>
+        <p class="bold">uszyte z miłości i polskich materiałów</p>
         <hr>
         <p class="bold bigger">            
             Ducky bags jest niewielką polską firmą, projektującą 
@@ -45,8 +45,8 @@
             Nasze produkty powstały z potrzeby stworzenia
             alternatywy  dla worków foliowych i jednorazówek. 
         </p>
-        <p class="bold link-underline">
-            Więcej o ducky znajdziesz, <a href="">tutaj</a>.
+        <p class="bold">
+            Więcej o nas i o materiałach ducky, <br>znajdziesz <a href="" class="link-underline">tutaj</a>.
         </p>
     </section>
 <!-- SHOP -->
@@ -55,8 +55,7 @@
             <a href="sklep.html">
                 <div class="main-width">
                     <hr>
-                    <h3>nasze produkty</h3>
-                    <h2 class="shop">bawełniana torba</h2>
+                    <h2 class="shop">Bawełniana Torba</h2>
                     <p class="shop bold">na chleb i inne przysmaki</p>
                     <p>
                         Torbę możemy zabrać ze sobą na zakupy
