mobile - main - rewriting about text and resizing base font to 14px

--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
 
 <!-- ABOUT -->
     <section class="about main-width">
-        <div class="slogan">naturalne<br>torby<br>do domowej<br>spiżarni</div>
-        <p class="bold">uszyte z miłości i polskich materiałów</p>
+        <div class="slogan">naturalne<br>torby<br>do domowej spiżarni</div>
+        <!-- <div class="claim">uszyte z polskich materiałów,<br>
+            stworzone z miłości do jedzenia</div> -->
+        <div class="claim">uszyte z miłości do jedzenia<br>
+            i polskich materiałów</div>
         <hr>
         <p class="bold bigger">            
-            Ducky bags jest niewielką polską firmą, projektującą 
-            i szyjącą worki do przechowywania żywności.</p>
+            Ducky to niewielka polska firma, projektująca 
+            oraz szyjąca torby do przechowywania produktów w twojej spiżarce lub lodówce.</p>
         <p>
-            Wszystkie produkty wykonujemy z naturalnych materiałów, głównie bawełny i lnu. 
-        </br>Te dwa wdzięczne surowce są w stanie zastąpić ogromną ilość produkowanego dzisiaj plastiku.
+            Wszystkie nasze produkty są wykonane z naturalnych materiałów, <a href="" class="link-underline">bawełny</a> i <a href="" class="link-underline">polskiego lnu</a>. Te wyjątkowe surowce mogą stać się alternatywą dla osób, które chcą ograniczyć ilość plastiku w swoim codziennym życiu.
+            <br>
+            Każda nasza torba została uszyta w Polsce, jest wielokrotnego użytku i w 100% biodegradowalna.
         </p>
         <p>
-            Nasze produkty powstały z potrzeby stworzenia
-            alternatywy  dla worków foliowych i jednorazówek. 
-        </p>
-        <p class="bold">
-            Więcej o nas i o materiałach ducky, <br>znajdziesz <a href="" class="link-underline">tutaj</a>.
+            Więcej o nas i naszej firmie znajdziesz <a href="" class="link-underline">tutaj</a>.
         </p>
     </section>
 <!-- SHOP -->
