mobile - main - v.1 done

--- a/index.html
+++ b/index.html
@@ -31,17 +31,23 @@
 
 <!-- ABOUT -->
     <section class="about main-width">
-        <div class="slogan">naturalne<br>torby<br>do domowej spiżarni</div>
+        <h1>naturalne<br>torby<br>do domowej spiżarni</h1>
         <!-- <div class="claim">uszyte z polskich materiałów,<br>
             stworzone z miłości do jedzenia</div> -->
-        <div class="claim">uszyte z miłości do jedzenia<br>
-            i polskich materiałów</div>
+        <div class="claim">uszyte z miłości do jedzenia</div>
         <hr>
-        <p class="bold bigger">            
-            Ducky to niewielka polska firma, projektująca 
-            oraz szyjąca torby do przechowywania produktów w twojej spiżarce lub lodówce.</p>
+        <p class="bold">            
+            Kochamy jeść i kochamy szyć. 
+            <br>
+            Dlatego stworzyliśmy markę, która pozwoli nam dłużej cieszyć się świeżością naszych ulubionych produktów spożywczych.
+            <br>
+            A przy okazji nie marnujemy jedzenia i ograniczamy zużycie plastiku. Win win.
+        </p>
         <p>
-            Wszystkie nasze produkty są wykonane z naturalnych materiałów, <a href="" class="link-underline">bawełny</a> i <a href="" class="link-underline">polskiego lnu</a>. Te wyjątkowe surowce mogą stać się alternatywą dla osób, które chcą ograniczyć ilość plastiku w swoim codziennym życiu.
+            Ducky to niewielka polska firma, projektująca 
+            oraz szyjąca torby do przechowywania produktów w twojej spiżarce lub lodówce. 
+            <br>
+            Wszystkie nasze produkty są wykonane z naturalnych materiałów, <a href="" class="link-underline">bawełny</a> i <a href="" class="link-underline">polskiego lnu</a>. Te wyjątkowe surowce mogą stać się alternatywą dla osób, które chcą ograniczyć w swoim codziennym życiu ilość zużywanego plastiku.
             <br>
             Każda nasza torba została uszyta w Polsce, jest wielokrotnego użytku i w 100% biodegradowalna.
         </p>
@@ -54,32 +60,26 @@
         <div class="product">
             <a href="sklep.html">
                 <div class="main-width">
-                    <hr>
-                    <h2 class="shop">Bawełniana Torba</h2>
-                    <p class="shop bold">na chleb i inne przysmaki</p>
+                    <h2>Rollo</h2>
+                    <h3>rolowana bawełniana torba na chleb i inne przysmaki</h3>
                     <p>
-                        Torbę możemy zabrać ze sobą na zakupy
-                        do sklepu lub piekarni, nie będziemy musieli korzystać jednorazówek.
+                        Idealna torba na wizyty w piekarni. Dajmy odpocząć ziemi od jednorazówek.
                     </p>
                 </div>
-                <div class="main-product-img">
-                    <img src="images/mobile-torba1.jpg">
-                </div>
             </a>
+            <img src="images/mobile-torba1.jpg" class="product-img">
         </div>
         <div class="product">
             <a href="sklep.html">
                 <div class="main-width">
-                    <h2 class="shop">lniany worek</h2>
-                    <p class="shop bold">do przechowywania</p>
+                    <h2>Uszatka</h2>
+                    <h3>lniany worek na zakupy<br>i do przechowywania </h3>
                     <p>
-                        Worek doskonale nadaje się na zakupy na  oraz do przechowywania produktów w lodówce.
+                        Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce 
                     </p>
                 </div>
-                <div class="main-product-img">
-                    <img src="images/mobile-worek1.jpg">
-                </div>
             </a>
+            <img src="images/mobile-worek1.jpg" class="product-img">
         </div>
     </section>
 <!-- INSTAGRAM -->
@@ -88,8 +88,8 @@
 <!-- FOOTER -->
     <div class="logo-slogan"></div>
     <footer>
-        <p class="bold">created by <a href="">agata kmiecińska</a></p>
-        <p>all rights reserved</p>
+        <p class="bold">created by <a href="" class="link-underline">agata kmiecińska</a></p>
+        <p>all rights reserved 2020</p>
     </footer>
 </body>
 </html>
