--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- NAVIGATION -->
     <nav>
         <div class="main-width">
-            <p>torby do przechowywania</p>
+            <div class="nav-claim">torby do domowej spiżarni</div>
             <a href="index.html">
                 <img src="images/logo.png" class="logo" alt="ducky storage bags logo" title="ducky storage bags">
             </a>
@@ -25,15 +25,19 @@
     </nav>
 
 <!-- HERO -->
-    <div class="full-width-img">
+    <div class="full-width-img-mobile">
         <img src="images/mobile-hero.jpg" alt="hero banner ducky">
+    </div>
+    <div class="full-width-img-ipad">
+        <img src="images/ipad-hero.jpg" alt="hero banner ducky">
+    </div>
+    <div class="full-width-img-desktop">
+        <img src="images/desktop-hero.jpg" alt="hero banner ducky">
     </div>
 
 <!-- ABOUT -->
     <section class="about main-width">
         <h1>naturalne<br>torby<br>do domowej spiżarni</h1>
-        <!-- <div class="claim">uszyte z polskich materiałów,<br>
-            stworzone z miłości do jedzenia</div> -->
         <div class="claim">uszyte z miłości do jedzenia</div>
         <hr>
         <p class="bold">            
@@ -61,13 +65,15 @@
             <a href="sklep.html">
                 <div class="main-width">
                     <h2>Rollo</h2>
-                    <h3>rolowana bawełniana torba na chleb i inne przysmaki</h3>
+                    <h3>rolowana bawełniana torba <br class="br">na chleb i inne przysmaki</h3>
                     <p>
                         Idealna torba na wizyty w piekarni. Dajmy odpocząć ziemi od jednorazówek.
                     </p>
                 </div>
             </a>
-            <img src="images/mobile-torba1.jpg" class="product-img">
+            <img src="images/mobile-torba1.jpg" class="product-img-mobile">
+            <img src="images/ipad-torba1.jpg" class="product-img-ipad">
+            <img src="images/desktop-torba1.jpg" class="product-img-desktop">
         </div>
         <div class="product">
             <a href="sklep.html">
@@ -79,7 +85,9 @@
                     </p>
                 </div>
             </a>
-            <img src="images/mobile-worek1.jpg" class="product-img">
+            <img src="images/mobile-worek1.jpg" class="product-img-mobile">
+            <img src="images/ipad-worek1.jpg" class="product-img-ipad">
+            <img src="images/desktop-worek1.jpg" class="product-img-desktop">
         </div>
     </section>
 <!-- INSTAGRAM -->
