mobile - main - fixing navbar / code refactoring

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <nav>
         <div class="main-width">
             <p>torby do przechowywania</p>
-            <a href="index.html">
-                <img src="images/logo.png" class="logo" alt="ducky storage bags logo" title="ducky storage bags">
-            </a>
-            <div class="nav-top">
+                <a href="index.html">
+                    <div class="nav-logo">
+                        <img src="images/logo.png" class="logo" alt="ducky storage bags logo" title="ducky storage bags">
+                    </div>
+                </a>
+            <div class="nav-links">
                 <a href="sklep.html">sklep</a>
                 <a href="about.html">o ducky</a>
                 <a href="about.html/#contact">kontakt</a>
@@ -31,7 +33,7 @@
 
 <!-- ABOUT -->
     <section class="about main-width">
-        <h1>naturalne<br>torby<br>do domowej spiżarni</h1>
+        <h1>naturalne torby<br>do domowej spiżarni</h1>
         <!-- <div class="claim">uszyte z polskich materiałów,<br>
             stworzone z miłości do jedzenia</div> -->
         <div class="claim">uszyte z miłości do jedzenia</div>
@@ -41,7 +43,7 @@
             <br>
             Dlatego stworzyliśmy markę, która pozwoli nam dłużej cieszyć się świeżością naszych ulubionych produktów spożywczych.
             <br>
-            A przy okazji nie marnujemy jedzenia i ograniczamy zużycie plastiku. Win win.
+            A przy okazji nie marnujemy jedzenia i ograniczamy zużycie plastiku.
         </p>
         <p>
             Ducky to niewielka polska firma, projektująca 
@@ -61,7 +63,7 @@
             <a href="sklep.html">
                 <div class="main-width">
                     <h2>Rollo</h2>
-                    <h3>rolowana bawełniana torba na chleb i inne przysmaki</h3>
+                    <h3>rolowana bawełniana torba<br>na chleb i inne przysmaki</h3>
                     <p>
                         Idealna torba na wizyty w piekarni. Dajmy odpocząć ziemi od jednorazówek.
                     </p>
