mobile - main - v.2 done / code refactoring

--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
         <hr>
         <p class="bold">            
             Kochamy jeść i kochamy szyć. 
-            <br>
-            Dlatego stworzyliśmy markę, która pozwoli nam dłużej cieszyć się świeżością naszych ulubionych produktów spożywczych.
-            <br>
-            A przy okazji nie marnujemy jedzenia i ograniczamy zużycie plastiku.
+        </p>
+        <p class="bold">
+            Dlatego stworzyliśmy markę, która pozwoli nam dłużej cieszyć się świeżością naszych ulubionych produktów spożywczych. A przy okazji nie marnujemy jedzenia i ograniczamy zużycie plastiku.
         </p>
         <p>
             Ducky to niewielka polska firma, projektująca 
@@ -74,7 +73,7 @@
         <div class="product">
             <a href="sklep.html">
                 <div class="main-width">
-                    <h2>Uszatka</h2>
+                    <h2>Ragnar</h2>
                     <h3>lniany worek na zakupy<br>i do przechowywania </h3>
                     <p>
                         Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce 
