mobile + ipad - main - done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- NAVIGATION -->
     <nav>
         <div class="main-width">
-            <p>torby do przechowywania</p>
+            <p>naturalne torby do domowej spiżarni</p>
                 <a href="index.html">
                     <div class="nav-logo">
                         <img src="images/logo.png" class="logo" alt="ducky storage bags logo" title="ducky storage bags">
@@ -25,18 +25,14 @@
             </div>
         </div>
     </nav>
-
 <!-- HERO -->
     <div class="full-width-img">
         <img src="images/mobile-hero.jpg" alt="hero banner ducky">
     </div>
-
 <!-- ABOUT -->
     <section class="about main-width">
-        <h1>naturalne torby<br>do domowej spiżarni</h1>
-        <!-- <div class="claim">uszyte z polskich materiałów,<br>
-            stworzone z miłości do jedzenia</div> -->
-        <div class="claim">uszyte z miłości do jedzenia</div>
+        <h1>naturalne torby <br class="disable">do domowej spiżarni</h1>
+        <h3>uszyte z miłości do jedzenia</h3>
         <hr>
         <p class="bold">            
             Kochamy jeść i kochamy szyć. 
@@ -48,7 +44,9 @@
             Ducky to niewielka polska firma, projektująca 
             oraz szyjąca torby do przechowywania produktów w twojej spiżarce lub lodówce. 
             <br>
+            <br>
             Wszystkie nasze produkty są wykonane z naturalnych materiałów, <a href="" class="link-underline">bawełny</a> i <a href="" class="link-underline">polskiego lnu</a>. Te wyjątkowe surowce mogą stać się alternatywą dla osób, które chcą ograniczyć w swoim codziennym życiu ilość zużywanego plastiku.
+            <br>
             <br>
             Każda nasza torba została uszyta w Polsce, jest wielokrotnego użytku i w 100% biodegradowalna.
         </p>
@@ -61,8 +59,8 @@
         <div class="product">
             <a href="sklep.html">
                 <div class="main-width">
-                    <h2>Rollo</h2>
-                    <h3>rolowana bawełniana torba<br>na chleb i inne przysmaki</h3>
+                    <h1>Rollo</h1>
+                    <h3>rolowana bawełniana torba na chleb i inne przysmaki</h3>
                     <p>
                         Idealna torba na wizyty w piekarni. Dajmy odpocząć ziemi od jednorazówek.
                     </p>
@@ -73,8 +71,8 @@
         <div class="product">
             <a href="sklep.html">
                 <div class="main-width">
-                    <h2>Ragnar</h2>
-                    <h3>lniany worek na zakupy<br>i do przechowywania </h3>
+                    <h1>Ragnar</h1>
+                    <h3>lniany worek na zakupy <br class="disable">i do przechowywania </h3>
                     <p>
                         Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce 
                     </p>
@@ -87,10 +85,9 @@
     <!-- <section class="instagram">
     </section> -->
 <!-- FOOTER -->
-    <div class="logo-slogan"></div>
+    <div class="logo-full"></div>
     <footer>
-        <p class="bold">created by <a href="" class="link-underline">agata kmiecińska</a></p>
-        <p>all rights reserved 2020</p>
+        <p class="small">all rights reserved 2020 || created by <a href="" class="link-underline">agata kmiecińska</a></p>
     </footer>
 </body>
 </html>
