desktop - main - done v.1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- NAVIGATION -->
     <nav>
         <div class="main-width">
-            <p>naturalne torby do domowej spiżarni</p>
+            <p class="bold slogan">naturalne torby do domowej spiżarni</p>
                 <a href="index.html">
                     <div class="nav-logo">
                         <img src="images/logo.png" class="logo" alt="ducky storage bags logo" title="ducky storage bags">
@@ -25,59 +25,62 @@
             </div>
         </div>
     </nav>
-<!-- HERO -->
     <div class="full-width-img">
         <img src="images/mobile-hero.jpg" alt="hero banner ducky">
     </div>
 <!-- ABOUT -->
     <section class="about main-width">
-        <h1>naturalne torby <br class="disable">do domowej spiżarni</h1>
-        <h3>uszyte z miłości do jedzenia</h3>
-        <hr>
-        <p class="bold">            
-            Kochamy jeść i kochamy szyć. 
-        </p>
-        <p class="bold">
-            Dlatego stworzyliśmy markę, która pozwoli nam dłużej cieszyć się świeżością naszych ulubionych produktów spożywczych. A przy okazji nie marnujemy jedzenia i ograniczamy zużycie plastiku.
-        </p>
-        <p>
-            Ducky to niewielka polska firma, projektująca 
-            oraz szyjąca torby do przechowywania produktów w twojej spiżarce lub lodówce. 
-            <br>
-            <br>
-            Wszystkie nasze produkty są wykonane z naturalnych materiałów, <a href="" class="link-underline">bawełny</a> i <a href="" class="link-underline">polskiego lnu</a>. Te wyjątkowe surowce mogą stać się alternatywą dla osób, które chcą ograniczyć w swoim codziennym życiu ilość zużywanego plastiku.
-            <br>
-            <br>
-            Każda nasza torba została uszyta w Polsce, jest wielokrotnego użytku i w 100% biodegradowalna.
-        </p>
-        <p>
-            Więcej o nas i naszej firmie znajdziesz <a href="" class="link-underline">tutaj</a>.
-        </p>
+        <div class="about-slogan">
+            <h1>naturalne torby <br class="disable">do domowej spiżarni</h1>
+        </div>
+        <hr class="disable">
+        <div class="about-text">
+            <h2 class="bold">            
+                Kochamy jeść i kochamy szyć 
+            </h2>
+            <p class="bold">
+                Dlatego stworzyliśmy markę, która pozwoli nam dłużej cieszyć się świeżością naszych ulubionych produktów spożywczych. A przy okazji nie marnujemy jedzenia i ograniczamy zużycie plastiku.
+            </p>
+            <p>
+                Ducky to niewielka polska firma, projektująca 
+                oraz szyjąca torby do przechowywania produktów w twojej spiżarce lub lodówce. 
+                <br>
+                <br>
+                Wszystkie nasze produkty są wykonane z naturalnych materiałów, <a href="" class="link-underline">bawełny</a> i <a href="" class="link-underline">polskiego lnu</a>. Te wyjątkowe surowce mogą stać się alternatywą dla osób, które chcą ograniczyć w swoim codziennym życiu ilość zużywanego plastiku.
+                <br>
+                <br>
+                Każda nasza torba została uszyta w Polsce, jest wielokrotnego użytku i w 100% biodegradowalna.
+                <br>
+                <br>
+                Więcej o nas i naszej firmie znajdziesz <a href="" class="link-underline">tutaj</a>.
+            </p>
+        </div>
+        
     </section>
 <!-- SHOP -->
     <section class="shop">
         <div class="product">
-            <a href="sklep.html">
                 <div class="main-width">
-                    <h1>Rollo</h1>
+                    <a href="sklep.html">
+                        <h1>torba</h1>
+                    </a>
                     <h3>rolowana bawełniana torba na chleb i inne przysmaki</h3>
                     <p>
                         Idealna torba na wizyty w piekarni. Dajmy odpocząć ziemi od jednorazówek.
                     </p>
                 </div>
-            </a>
             <img src="images/mobile-torba1.jpg" class="product-img">
         </div>
         <div class="product">
-            <a href="sklep.html">
                 <div class="main-width">
-                    <h1>Ragnar</h1>
+                    <a href="sklep.html">
+                        <h1>worek</h1>
+                    </a>
                     <h3>lniany worek na zakupy <br class="disable">i do przechowywania </h3>
                     <p>
                         Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce 
                     </p>
                 </div>
-            </a>
             <img src="images/mobile-worek1.jpg" class="product-img">
         </div>
     </section>
@@ -87,7 +90,7 @@
 <!-- FOOTER -->
     <div class="logo-full"></div>
     <footer>
-        <p class="small">all rights reserved 2020 || created by <a href="" class="link-underline">agata kmiecińska</a></p>
+        <p class="footer">all rights reserved 2020 || created by <a href="" class="link-underline">agata kmiecińska</a></p>
     </footer>
 </body>
 </html>
