--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         </div>
     </nav>
     <div class="full-width-img">
-        <img src="images/mobile-hero.jpg" alt="hero banner ducky">
+        <div class="full-width-img">
+            <img src="images/mobile-hero.jpg"
+                srcset="images/mobile-hero.jpg 240w, images/ipad-hero.jpg 737w, images/desktop-hero.jpg 1300w"
+                        alt="hero ducky">
+        </div>
     </div>
 <!-- ABOUT -->
     <section class="about main-width">
