--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p class="bold slogan">naturalne torby do domowej spiżarni</p>
                 <a href="index.html">
                     <div class="nav-logo">
-                        <img src="images/logo.png" class="logo" alt="ducky storage bags logo" title="ducky storage bags">
+                        <img src="images/ducky-logo.png" class="logo" alt="ducky logo" title="ducky logo">
                     </div>
                 </a>
             <div class="nav-links">
@@ -27,8 +27,12 @@
     </nav>
     <div class="full-width-img">
         <div class="full-width-img">
-            <img src="images/mobile-hero.jpg"
-                srcset="images/mobile-hero.jpg 240w, images/ipad-hero.jpg 737w, images/desktop-hero.jpg 1300w"
+            <img
+                srcset="images/mobile-hero.jpg 500w,  
+                images/ipad-hero.jpg 900w,             
+                images/desktop-hero.jpg 1300w"
+                sizes="(min-width: 1300px) 1300px, (min-width: 737px) 900px, 500px"
+                src="images/desktop-hero.jpg"
                         alt="hero ducky">
         </div>
     </div>
@@ -62,7 +66,7 @@
         
     </section>
 <!-- SHOP -->
-    <section class="shop">
+    <!-- <section class="shop">
         <div class="product">
                 <div class="main-width">
                     <a href="sklep.html">
@@ -87,7 +91,7 @@
                 </div>
             <img src="images/mobile-worek1.jpg" class="product-img">
         </div>
-    </section>
+    </section> -->
 <!-- INSTAGRAM -->
     <!-- <section class="instagram">
     </section> -->
