--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p class="bold slogan">naturalne torby do domowej spiżarni</p>
                 <a href="index.html">
                     <div class="nav-logo">
-                        <img src="images/ducky-logo.png" class="logo" alt="ducky logo" title="ducky logo">
+                        <img src="images/ducky_logo.png" class="logo" alt="ducky logo" title="ducky logo">
                     </div>
                 </a>
             <div class="nav-links">
@@ -25,8 +25,8 @@
             </div>
         </div>
     </nav>
-    <div class="full-width-img">
-        <div class="full-width-img">
+    <div class="img-hero">
+        <!-- <div class="full-width-img">
             <img
                 srcset="images/mobile-hero.jpg 500w,  
                 images/ipad-hero.jpg 900w,             
@@ -34,7 +34,7 @@
                 sizes="(min-width: 1300px) 1300px, (min-width: 737px) 900px, 500px"
                 src="images/desktop-hero.jpg"
                         alt="hero ducky">
-        </div>
+        </div> -->
     </div>
 <!-- ABOUT -->
     <section class="about main-width">
@@ -44,7 +44,7 @@
         <hr class="disable">
         <div class="about-text">
             <h2 class="bold">            
-                Kochamy jeść i kochamy szyć 
+                kochamy jeść i kochamy szyć 
             </h2>
             <p class="bold">
                 Dlatego stworzyliśmy markę, która pozwoli nam dłużej cieszyć się świeżością naszych ulubionych produktów spożywczych. A przy okazji nie marnujemy jedzenia i ograniczamy zużycie plastiku.
@@ -66,32 +66,32 @@
         
     </section>
 <!-- SHOP -->
-    <!-- <section class="shop">
+    <section class="shop">
         <div class="product">
-                <div class="main-width">
-                    <a href="sklep.html">
-                        <h1>torba</h1>
-                    </a>
-                    <h3>rolowana bawełniana torba na chleb i inne przysmaki</h3>
-                    <p>
-                        Idealna torba na wizyty w piekarni. Dajmy odpocząć ziemi od jednorazówek.
-                    </p>
-                </div>
-            <img src="images/mobile-torba1.jpg" class="product-img">
+            <div class="main-width">
+                <a href="sklep.html">
+                    <h1>torba</h1>
+                </a>
+                <h3>rolowana bawełniana torba na chleb i inne przysmaki</h3>
+                <p>
+                    Idealna torba na wizyty w piekarni. Dajmy odpocząć ziemi od jednorazówek.
+                </p>
+            </div>
+            <div class="product-img"></div>
         </div>
         <div class="product">
-                <div class="main-width">
-                    <a href="sklep.html">
-                        <h1>worek</h1>
-                    </a>
-                    <h3>lniany worek na zakupy <br class="disable">i do przechowywania </h3>
-                    <p>
-                        Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce 
-                    </p>
-                </div>
-            <img src="images/mobile-worek1.jpg" class="product-img">
+            <div class="main-width">
+                <a href="sklep.html">
+                    <h1>worek</h1>
+                </a>
+                <h3>lniany worek na zakupy <br class="disable">i do przechowywania </h3>
+                <p>
+                    Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce 
+                </p>
+            </div>
+            <div class="product-img"></div>
         </div>
-    </section> -->
+    </section>
 <!-- INSTAGRAM -->
     <!-- <section class="instagram">
     </section> -->
